# Tic-Tac-Toe

./: CMakeLists.txt  README.md
src/: coordinate.h  figure.cpp  figure.h  game_field.cpp  game_field.h  game_handler.cpp  game_handler.h  main.cpp  player.cpp  player.h  random_player.cpp  random_player.h  smart_player.cpp  smart_player.h  tic_tac_toe_game.cpp  tic_tac_toe_game.h  user.cpp  user.h
